<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/original1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="696dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/icon_back"
                android:stateListAnimator="@null" ></Button>

            <RelativeLayout
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_above="@+id/signin_fullname"
                    android:fontFamily="@font/allura"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="10dp"
                    android:text="@string/signup"
                    android:textColor="@color/colorPrimary"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    tools:ignore="NotSibling" />
            </RelativeLayout>

            <EditText
                android:id="@+id/signin_fullname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/imageView1"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"

                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/signup_name"
                android:inputType="textPersonName"
                android:padding="5sp"
                android:textColorHighlight="#dce775"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/signin_diachi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/signin_fullname"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"

                android:drawableStart="@drawable/baseline_location_on_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/signup_address"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHighlight="#dce775"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/signin_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/signin_diachi"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"

                android:drawableStart="@drawable/baseline_call_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/signup_phone"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHighlight="#dce775"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/signin_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/signin_phone"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"

                android:drawableStart="@drawable/baseline_email_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHighlight="#dce775"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/signin_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/signin_email"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:drawableStart="@drawable/baseline_lock_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/enter_pass"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHighlight="#dce775"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/signup_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/signin_password"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"

                android:drawableStart="@drawable/baseline_lock_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/confirmpassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHighlight="#dce775"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/signup_confirmpassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/signup"
                android:textColor="@color/nav_items"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/sign_in_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_sign_up"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal|center_vertical"
                android:paddingLeft="150sp"
                android:text="@string/signinagain"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_sign_up"
                android:layout_marginBottom="16dp"
                android:layout_toRightOf="@id/sign_in_again"
                android:gravity="center_horizontal|center_vertical"
                android:paddingLeft="30sp"
                android:text="@string/Exit"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>