<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChiTietSanPham"
    android:id="@+id/activity_main">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_frame">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--            <SearchView-->
            <!--                android:id="@+id/cardSearch"-->
            <!--                android:layout_marginLeft="16dp"-->
            <!--                android:layout_marginRight="16dp"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="50dp"-->
            <!--                android:background="@drawable/circle"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:queryHint="@string/text_search"/>-->

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerImageSlider"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingStart="80dp"
                android:paddingEnd="80dp"/>
            <TextView
                android:id="@+id/gia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gia"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/viewPagerImageSlider"
                android:gravity="right"/>
            <TextView
                android:id="@+id/tensanpham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gia"
                android:text="@string/tensanpham"
                android:textSize="25sp"
                android:layout_marginLeft="16dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/giaSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tensanpham"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/aclonica"
                android:text="Price "
                android:textAllCaps="true"
                android:textColor="#CF0A4D"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/chitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/giaSP"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/baseline_email_black_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/boogaloo"
                android:text="Detail Product"
                android:textAllCaps="true"
                android:textColor="#131212"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/thongtin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chitiet"
                android:text="@string/thongtinsanpham"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="22dp"
                android:layout_marginBottom="10dp"
                android:lineSpacingExtra="7dp"
                android:textColor="@android:color/black"/>


            <TextView
                android:id="@+id/bieudokichco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thongtin"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ic_card_giftcard_black_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/boogaloo"
                android:text="Capacity"
                android:textColor="#131212"
                android:textAllCaps="true"
                android:textSize="20sp" />
            <LinearLayout
                android:id="@+id/linearButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/bieudokichco"
                android:layout_marginTop="16dp"
                android:gravity="center">

                <Button
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="50ml"
                    android:background="@drawable/ripplebtnsize"/>
                <Button
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="25ml"
                    android:background="@drawable/ripplebtnsize"
                    android:layout_marginLeft="10dp" />
<!--                <Button-->
<!--                    android:layout_width="80dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/size9uk"-->
<!--                    android:background="@drawable/ripplebtnsize"-->
<!--                    android:layout_marginLeft="10dp"/>-->
<!--                <Button-->
<!--                    android:layout_width="80dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/size10uk"-->
<!--                    android:background="@drawable/ripplebtnsize"-->
<!--                    android:layout_marginLeft="10dp"/>-->
            </LinearLayout>

            <TextView
                android:id="@+id/soluongsp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearButton"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_local_grocery_store_black_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/boogaloo"
                android:textColor="#131212"
                android:text="Quantity"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/linearQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/soluongsp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="70dp"
                android:gravity="center">
                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:textSize="7dp"
                    android:id="@+id/soLuongSP" />

<!--                <Button-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:background="@drawable/dautru" />-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginLeft="25dp"-->
<!--                    android:layout_marginRight="25dp"-->
<!--                    android:text="0"-->
<!--                    android:textColor="@android:color/black"-->
<!--                    android:textSize="30sp" />-->

<!--                <Button-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:background="@drawable/ripplebtncong" />-->

            </LinearLayout>



        </RelativeLayout>

    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_dathang"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/backround1"
            android:drawableEnd="@drawable/ic_local_grocery_store_black_24dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/dathang"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="19sp" />
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>